fix(virtual-background): Style adjustments on virtual background dialog on small screens.

--- a/css/modals/virtual-background/_virtual-background.scss
+++ b/css/modals/virtual-background/_virtual-background.scss
@@ -11,12 +11,12 @@
         opacity: .5;
         border: 2px solid #99bbf3;
         @media (min-width: 432px) and (min-width: 432px) and (max-width: 632px) {
-            height: 56px;
-            width: 56px;
+            height: 60px;
+            width: 60px;
         }
         @media (max-width: 432px){
-            height: 56px;
-            width: 56px;
+            height: 60px;
+            width: 60px;
         }
     }
     .background-option {
@@ -85,10 +85,26 @@
 
     @media (min-width: 432px) and (max-width: 632px) {
         font-size: 1.5vw;
+        .desktop-share, .virtual-background-none, .thumbnail, .blur, .slight-blur{
+            height: 60px;
+            width: 60px;
+        }
+        .desktop-share-selected, .thumbnail-selected, .none-selected, .blur-selected, .slight-blur-selected{
+            height: 60px;
+            width: 60px;
+        }
     }
     @media (max-width: 432px){
         grid-template-columns: auto auto auto;
         font-size: 1.5vw;
+        .desktop-share, .virtual-background-none, .thumbnail, .blur, .slight-blur{
+            height: 60px;
+            width: 60px;
+        }
+        .desktop-share-selected, .thumbnail-selected, .none-selected, .blur-selected, .slight-blur-selected{
+            height: 60px;
+            width: 60px;
+        }
     }
     @media (max-width: 320px){
         grid-template-columns: auto auto auto;
